<resources>

    <string name="msetting">THIẾT ĐẶT THÔNG SÔ</string>
    <string name="setting">DANH SÁCH CHỨC NĂNG</string>
    <string name="setting_txt1">Live Score</string>
    <string name="setting_txt2">Chọn giải đấu</string>
    <string name="setting_txt3">Các trận quan tâm</string>
    <string name="setting_txt4">BẢNG XẾP HẠNG</string>
    <string name="setting_txt5">Game dự đoán</string>
    <string name="setting_txt6">Nhận định của chuyên gia</string>
    <string name="setting_txt7">Máy tính dự đoán</string>
    <string name="setting_txt8">Phong độ các đội</string>
    <string name="bangxephang">@string/setting_txt4</string>
    <string name="danhsachgiaidau">dach sach giai dau</string>
    <string name="cacnuoc">QUỐC GIA</string>
    <string name="tyso">Ty so</string>
    <string name="quocgia">QUỐC GIA</string>
    <string name="phongdo">PHONG ĐỘ</string>
    <string name="stt">STT</string>
    <string name="tendoi">Tên Đội</string>
    <string name="pts">PTS</string>
    <string name="gp">GP</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="gf">GF</string>
    <string name="ga">GA</string>
    <string name="_congtru">+/-</string>
    <string name="livescore">@string/setting_txt1</string>
    <string name="tranquantam">TRẬN QUAN TÂM</string>
    <string name="xemphongdo">XEM PHONG ĐỘ</string>
    <string name="ketqua5trangannhat">Kết quả 5 trận gần nhất</string>
    <string name="bangephang2doi">Bảng xếp hạng 2 đội</string>
    <string name="sannha">Sân nhà</string>
    <string name="sankhach">Sân khách</string>
    <string name="sotranghibansannha">Số trận ghi bàn sân nhà</string>
    <string name="tileghibansannhatrungbinh">Tỷ lệ ghi bàn sân nhà trung bình</string>
    <string name="sotrankhongghibansannha">Số trận không ghi bàn sân nhà</string>
    <string name="sotransachluoisannha">Số trận sạch lưới sân nhà</string>
    <string name="sotranlotluonsannha">Số trận lọt lưới sân nhà</string>
    <string name="tylelotluonsannhatrungbinh">Tỷ lệ lọt lưới sân nhà trung bình</string>
    <string name="tuongthuattran">TƯỜNG THUẬT</string>
    <string name="tyledudoan">TỶ LỆ DỰ ĐOÁN</string>
    <string name="dudoanketqua">DỰ ĐOÁN KẾT QUẢ</string>
    <string name="gamedudoan">GAME DỰ ĐOÁN</string>
    <string name="keo">Kèo</string>
    <string name="nhandinhchuyengia">Nhận định chuyên gia</string>
    <string name="nhandinhchuyengia_list">Nhận định chuyên gia</string>

    <color name="cccccc">#cccccc</color>

    <dimen name="height_phongdo">@dimen/dimen_40dp</dimen>
    <dimen name="width_phongdo">@dimen/dimen_70dp</dimen>

    <string name="phongdotinhtrentongsotran">Phong độ tính trên tổng số trận</string>
    <string name="khanangtancongphongthu">Khả năng tấn công / phòng thủ</string>
    <string name="tancong">Tấn công</string>
    <string name="tyleghibantrungbinh">Tỷ lệ ghi bàn trung bình</string>
    <string name="sotrankhongghiban">Số trận không ghi bàn</string>
    <string name="sotranghiban">Số trận ghi bàn</string>
    <string name="hieusobanthang">Hiệu số bàn thắng</string>
    <string name="phongthu">Phòng thủ</string>
    <string name="tylelotluoitrungbinh">Tỷ lệ lọt lưới trung bình</string>
    <string name="sotrankhonglotluoi">Số trận không lọt lưới</string>
    <string name="sotranlotluoi">Số trận lọt lưới</string>
    <string name="hieusobanthua">Hiệu số bàn thua</string>
    <string name="check_for_reload">Check for endable reload</string>
    <string name="tran"> trận</string>
    <string name="thecao">Thẻ cào</string>
    <string name="tinnhansms">Tin nhắn SMS</string>
    <string name="appstore">App Store</string>
    <string name="nhamang">Nhà mạng :</string>
    <string name="sodienthoai">Số điện thoại :</string>
    <string name="sothe">Số thẻ :</string>
    <string name="soseri">"Số sê ri : "</string>
    <string name="lamlai">Làm lại</string>
    <string name="nap">Nạp</string>
    <string name="tinnhan_header">Chỉ hỗ trợ nạp SMS qua các nhà mạng:\n
        -Vietel: Tối đa 150k/ thuê bao/ ngày\n
        -Vinaphone: Tối đa 100k/ thuê bao/ ngày\n
        -Mobiphone: Tối đa 300k/ thuê bao/ ngày\n\n
        Nạp từ 2 thuê bao khác nhau tính riêng rẽ.\n
        Cú pháp: TYSO24H NAP Username 1038</string>
    <string name="check_network">Please check your network! Click "Ok" to continue connect to server or click "Cancel" to close application!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="cannotconnecttoserverr">Can not connect to server, click "Ok" to close application!</string>
    <string name="nhap_so_dien_thoai_cua_ban">"Nhập số điện thoại của bạn : "</string>
    <string name="ma_truy_cap_se_duoc_gui_den_sms_cua_ban">Mã truy cập sẽ được gửi đến SMS của bạn.</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="xac_nhan_so_dien_thoai">Xác nhận số điện thoại</string>

    <string name="xacnhansodienthoai_comfirm">Đây có phải số điện thoại của bạn không?\n
        %s\n
        Chúng tôi sẽ gửi một SMS chứa mã truy cập đến số điện thoại này.</string>
        
    <string name="thaydoi">Thay đổi</string>
    <string name="hoan_tat">Hoàn tất</string>
    <string name="matruycap">Mã truy cập</string>
    <string name="neukhong">Nếu bạn không nhận được mã truy cập trong vòng 60s.\nXin hãy nhấn vào đây.</string>
    <string name="chuc_mung_dang_ky_thanh_cong">Chúc mừng bạn đăng ký thành công.</string>
    <string name="chuanhapsodienthoai">Chưa nhập số điện thoại</string>
    <string name="user_register_error">Lỗi trong quá trình xử lý</string>
    <string name="nhap_ma_xac_thuc_cua_ban">"Nhập mã xác thực của bạn : "</string>
    <string name="chuanhapmaxacthuc">Chưa nhập mã xác thực</string>
    <string name="chuanhap_sdt_mxt">Chưa nhập số điện thoại và mã xác thực</string>
    <string name="chuc_mung_login_thanh_cong">Chúc mừng bạn đăng nhập thành công.</string>
    <string name="user_login_error">Lỗi trong quá trình xử lý</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="chuanhapthedienthoai">Chưa nhập mã số thẻ</string>
    <string name="chuanhapseridienthoai">Chưa nhập seri thẻ</string>
    <string name="chuc_mung_napthe_thanh_cong">Chúc mừng bạn nạp thẻ thành công.</string>
    <string name="user_napthe_error">Lỗi trong quá trình xử lý</string>
    <string name="user_napthe_error2">Chưa nhập thông tin chính xác</string>
    <string name="user_napthe_error3">Không có tài khoản mạng</string>
    <string name="user_napthe_error4">Không có tài khoản nhận</string>
    <string name="sobancotheghi">Số bàn có thể ghi:</string>
    <string name="gamedudoan_login">Vui lòng đăng nhập</string>
    <string name="favorite_err">Có lỗi trong quá trình xử lý</string>
</resources>