<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical" >
	<LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center" >
         <TextView
             android:id="@+id/line_row"
             style="@style/bongda_text_item_small_bangxephang"
             android:layout_width="fill_parent"
             android:layout_height="@dimen/dimen_1dp"
             android:background="#cc6601"
             android:visibility="gone"
             android:textAppearance="?android:attr/textAppearanceLarge" />
     </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_5dp" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/llm1"
            android:gravity="left" >

            <TextView
                android:id="@+id/stt"
                style="@style/bongda_text_item_small_bangxephang"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="wrap_content"
                android:text="@string/stt"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tendoi"
                style="@style/bongda_text_item_small_bangxephang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tendoi"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/pts"
                style="@style/bongda_text_item_small_bangxephang"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="wrap_content"
                android:text="@string/pts"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/gp"
                style="@style/bongda_text_item_small_bangxephang"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="wrap_content"
                android:text="@string/gp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/w"
                style="@style/bongda_text_item_small_bangxephang"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="wrap_content"
                android:text="@string/w"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/d"
                style="@style/bongda_text_item_small_bangxephang"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="wrap_content"
                android:text="@string/d"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/l"
                style="@style/bongda_text_item_small_bangxephang"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="wrap_content"
                android:text="@string/l"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/gf"
                style="@style/bongda_text_item_small_bangxephang"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="wrap_content"
                android:text="@string/gf"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ga"
                style="@style/bongda_text_item_small_bangxephang"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="wrap_content"
                android:text="@string/ga"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/_congtru"
                style="@style/bongda_text_item_small_bangxephang"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="wrap_content"
                android:text="@string/_congtru"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>