<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="@dimen/dimen_280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:text="@string/nhamang"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dimen_13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp" >

            <RadioGroup
                android:id="@+id/radioGroup_nhamang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="@dimen/dimen_90dp"
                    android:layout_height="fill_parent"
                    android:background="@drawable/thecao_viettel_xml"
                    android:button="@drawable/transfer"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="@dimen/dimen_90dp"
                    android:layout_height="fill_parent"
                    android:background="@drawable/thecao_mobile_xml"
                    android:button="@drawable/transfer" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="@dimen/dimen_90dp"
                    android:layout_height="fill_parent"
                    android:background="@drawable/thecao_vina_xml"
                    android:button="@drawable/transfer" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/Textsodt"
            android:layout_width="@dimen/dimen_280dp"
            android:layout_height="@dimen/dimen_35dp"
            android:gravity="center_vertical"
            android:text="@string/sodienthoai"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dimen_13dp" />

        <EditText
            android:id="@+id/edit_sdt"
            style="@style/bongda_editext"
            android:layout_width="@dimen/dimen_280dp"
            android:layout_height="@dimen/dimen_35dp"
            android:ems="10" >
        </EditText>
        
        <TextView
            android:id="@+id/TextView01"
            android:layout_width="@dimen/dimen_280dp"
            android:layout_height="@dimen/dimen_35dp"
            android:gravity="center_vertical"
            android:text="@string/sothe"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dimen_13dp" />

        <EditText
            android:id="@+id/edit_sothe"
            style="@style/bongda_editext"
            android:layout_width="@dimen/dimen_280dp"
            android:layout_height="@dimen/dimen_35dp"
            android:ems="10" >
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="@dimen/dimen_280dp"
            android:layout_height="@dimen/dimen_35dp"
            android:gravity="center_vertical"
            android:text="@string/soseri"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dimen_13dp" />

        <EditText
            android:id="@+id/edit_soseri"
            style="@style/bongda_editext"
            android:layout_width="@dimen/dimen_280dp"
            android:layout_height="@dimen/dimen_35dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:ems="10" >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_35dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:gravity="center" >

            <Button
                android:id="@+id/button1"
                android:layout_width="@dimen/dimen_120dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/dimen_15dp"
                android:background="@drawable/a_button_xml"
                android:gravity="center"
                android:text="@string/lamlai"
                android:textSize="@dimen/dimen_13dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="@dimen/dimen_120dp"
                android:layout_height="fill_parent"
                android:background="@drawable/a_button_xml"
                android:gravity="center"
                android:text="@string/nap"
                android:textSize="@dimen/dimen_13dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>